404 page for mobile and button variations done

--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/kinxori-logo-png-icon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kinxori</title>
+    <meta name="keywords" content="React developer, Front-end developer, Javascript developer, CSS developer, HTML5 developer, HTML developer, Front end freelancer" />
+    <meta name="description" content="My personal website showcases my career as a front-end developer. It provides visitors with an in-depth look at my projects, skills, and hobbies. If you share similar interests and like what you see, we can connect to be friends, share knowledge, or collaborate on a project." />
+    <meta name="author" content="Gustavo Quiroz - @kinxori" />
+    <meta name="robots" content="index, follow" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/kinxori-logo-png-icon.png" />
+    <link rel="canonical" href="https://kinxori.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-    <script src="https://kit.fontawesome.com/71cfa127b4.js" crossorigin="anonymous"></script>
+    <script defer type="module" src="/src/main.tsx"></script>
+    <script defer src="https://kit.fontawesome.com/71cfa127b4.js" crossorigin="anonymous"></script>
   </body>
 </html>
