--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./_index.css">
   </head>
-  <body>
-    <div id="root"></div>
+  <body id="root">
     <script defer type="module" src="/src/main.tsx"></script>
     <script defer src="https://kit.fontawesome.com/71cfa127b4.js" crossorigin="anonymous"></script>
   </body>
