state stored in cache for demoCard component in each route

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="robots" content="index, follow" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/kinxori-logo-png-icon.png" />
+    <link rel="icon" href="/kinxori-logo-png-icon.ico" type="ico" />
     <link rel="canonical" href="https://kinxori.com" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
