moving all assets to 'src > assets' folder

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <title>Kinxori</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./src/assets/kinxori-logo-png-icon.ico" />
     <meta
       name="keywords"
       content="React developer, Front-end developer, Javascript developer, CSS developer, HTML5 developer, HTML developer, Front end freelancer, Kinxori, Gustavo Quiroz"
@@ -12,9 +15,6 @@
     />
     <meta name="author" content="Gustavo Quiroz - @kinxori" />
     <meta name="robots" content="index, follow" />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/kinxori-logo-png-icon.ico" type="ico" />
     <link rel="canonical" href="https://kinxori.com" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
